--- a/project-healthcalc/pom.xml
+++ b/project-healthcalc/pom.xml
@@ -1,67 +1,43 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>uma.isa</groupId>
-  <artifactId>project-healthcalc</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>project-healthcalc</name>
-  <url>http://maven.apache.org</url>
-
+  <artifactId>HealthCalc</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>18</maven.compiler.source>
-    <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+    <maven.compiler.target>18</maven.compiler.target>
   </properties>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.junit</groupId>
-        <artifactId>junit-bom</artifactId>
-        <version>5.11.4</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
-  <dependencies>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-
+  
   <build>
-    <plugins>
-    <plugin>
-      <artifactId>maven-surefire-plugin</artifactId>
-      <version>3.5.2</version>
-      <configuration>
-        <statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
-          <disable>false</disable>
-          <version>3.0</version>
-          <usePhrasedFileName>false</usePhrasedFileName>
-          <usePhrasedTestSuiteClassName>true</usePhrasedTestSuiteClassName>
-          <usePhrasedTestCaseClassName>true</usePhrasedTestCaseClassName>
-          <usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
-        </statelessTestsetReporter>
-        <consoleOutputReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5ConsoleOutputReporter">
-          <disable>false</disable>
-          <encoding>UTF-8</encoding>
-          <usePhrasedFileName>false</usePhrasedFileName>
-        </consoleOutputReporter>
-        <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoReporter">
-          <disable>false</disable>
-          <usePhrasedFileName>false</usePhrasedFileName>
-          <usePhrasedClassNameInRunning>true</usePhrasedClassNameInRunning>
-          <usePhrasedClassNameInTestCaseSummary>true</usePhrasedClassNameInTestCaseSummary>
-        </statelessTestsetInfoReporter>
-      </configuration>
-    </plugin>
-    </plugins>
-  </build>
+	    <plugins>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-surefire-plugin</artifactId>
+	            <version>3.2.5</version>
+	        </plugin>
+	    </plugins>
+	</build>
 
+	<dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>5.10.2</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    
+  <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
